--- a/setting/absent.css
+++ b/setting/absent.css
@@ -15,9 +15,8 @@
 }
 
 .absent_number {
-  width: 50px;
-  height: 50px;
   margin: 10px;
+  padding: 5px 20px;
   color: white;
   background: rgb(245, 87, 0);
   border-radius: 5px;
