--- a/setting/qrcode.css
+++ b/setting/qrcode.css
@@ -3,16 +3,22 @@
   height: 150px;
 }
 
+.qr_buttons {
+  display: flex;
+  margin-top: 30px;
+  justify-content: center;
+}
+
 .qr_button {
   position: inherit;
-  left: calc(50% - 74px);
   top: 10px;
+  height: 30px;
+  margin: 0 20px;
   padding: 15px;
-  color: white;
-  background: rgb(245, 87, 0);
+
   border-radius: 30px;
   font-size: 20px;
-  line-height: 50px;
+  line-height: 30px;
   cursor: pointer;
   opacity: 100%;
   transition: all ease 0.3s;
@@ -20,6 +26,16 @@
 
 .qr_button input {
   display: none;
+}
+
+.qr_button_0 {
+  color: white;
+  background: rgb(245, 87, 0);
+}
+
+.qr_button_1 {
+  color: black;
+  background: rgb(250, 250, 250);
 }
 
 #canvas {
